--- a/gradle.properties
+++ b/gradle.properties
@@ -15,4 +15,14 @@ org.gradle.jvmargs=-Xmx1536m
 
 
 
+#包信息  需要修改成你的
+GROUP_ID = kap.coder.allen.com
+
+# Licence信息  基本是固定的
+PROJ_LICENCE_NAME=The Apache Software License, Version 2.0
+PROJ_LICENCE_URL=http://www.apache.org/licenses/LICENSE-2.0.txt
+PROJ_LICENCE_DEST=repo
+
+
+
 IsBuildMudle=false
