--- a/modleb/src/main/debug/AndroidManifest.xml
+++ b/modleb/src/main/debug/AndroidManifest.xml
@@ -9,7 +9,7 @@
         android:label="@string/app_name"
         android:roundIcon="@drawable/ic_launcher_round"
         android:supportsRtl="true">
-        <activity android:name="debug.MainActivity">
+        <activity android:name="debug.BMainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
                 <category android:name="android.intent.category.LAUNCHER" />
