--- a/modela/build.gradle
+++ b/modela/build.gradle
@@ -36,6 +36,9 @@ android {
                 manifest.srcFile 'src/main/debug/AndroidManifest.xml'
             } else {
                 manifest.srcFile 'src/main/AndroidManifest.xml'
+                java {
+                    exclude 'debug/**'
+                }
             }
         }
     }
