--- a/modela/src/main/debug/AndroidManifest.xml
+++ b/modela/src/main/debug/AndroidManifest.xml
@@ -8,7 +8,7 @@
         android:label="@string/app_name"
         android:roundIcon="@drawable/ic_launcher_round"
         android:supportsRtl="true">
-        <activity android:name="debug.MainActivity">
+        <activity android:name="debug.AMainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
